2010-01-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Rotate ChangeLog.
	* ChangeLog.09: New file, rotated from ...
	* ChangeLog: ... here.
	* Makefile.am (EXTRA_DIST): Distribute ChangeLog.09.

-----

Copyright (C) 2010  Free Software Foundation, Inc.

Copying and distribution of this file, with or without modification, are
permitted provided the copyright notice and this notice are preserved.

;; Variables:
;; coding: utf-8
;; End: