@@ -1,5 +1,10 @@
 2010-01-17  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Bump copyright years.
+	* aclocal.in (write_aclocal, version): Bump copyright years.
+	* automake.in (gen_copyright, version): Likewise.
+	* doc/automake.texi: Likewise.
+
 	Rotate ChangeLog.
 	* ChangeLog.09: New file, rotated from ...
 	* ChangeLog: ... here.
